WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
14689
REGRESSION (3.0.2-TOT): <select> menu items have incorrect background color
https://bugs.webkit.org/show_bug.cgi?id=14689
Summary
REGRESSION (3.0.2-TOT): <select> menu items have incorrect background color
mitz
Reported
2007-07-20 08:19:09 PDT
I think this regressed in <
http://trac.webkit.org/projects/webkit/changeset/21544
>. I am going to post a test case and a patch.
Attachments
Test case
(4.51 KB, text/html)
2007-07-20 08:19 PDT
,
mitz
no flags
Details
Compute item background colors in the client and ensure opaqueness
(14.37 KB, patch)
2007-07-20 08:47 PDT
,
mitz
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
mitz
Comment 1
2007-07-20 08:19:47 PDT
Created
attachment 15600
[details]
Test case
mitz
Comment 2
2007-07-20 08:47:22 PDT
Created
attachment 15601
[details]
Compute item background colors in the client and ensure opaqueness Includes a manual test.
Darin Adler
Comment 3
2007-07-20 08:50:57 PDT
Comment on
attachment 15601
[details]
Compute item background colors in the client and ensure opaqueness r=me
Matt Lilek
Comment 4
2007-07-20 09:45:11 PDT
Committed revision 24481.
Mark Rowe (bdash)
Comment 5
2007-08-02 08:40:51 PDT
<
rdar://problem/5380585
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug