WebCore/platform/graphics/Color.h
@@ -87,6 +87,7 @@ public:
     Color light() const;
     Color dark() const;
 
+    Color blend(const Color&) const;
     Color blendWithWhite() const;
 
 #if PLATFORM(QT)
