WebCore/rendering/RenderTextControl.cpp
@@ -984,6 +984,11 @@ RenderStyle* RenderTextControl::itemStyle(unsigned listIndex) const
     return style();
 }
 
+Color RenderTextControl::itemBackgroundColor(unsigned listIndex) const
+{
+    return style()->backgroundColor();
+}
+
 RenderStyle* RenderTextControl::clientStyle() const
 {
     return style();
